# srcsim2017

./: .gitignore  Dockerfile  README.md  startup.bash
docker/: notes.txt
fc/: fc.py  zarjcheckpoint.py  zarjmacro.py  zarjtask.py
fc/task0/: __init__.py  task0.py
fc/task1/: __init__.py  checkpointa1.py  checkpointa2.py  checkpointa3.py  checkpointa4.py  task1.py
fc/task2/: __init__.py  checkpointb1.py  checkpointb2.py  checkpointb3.py  checkpointb4.py  checkpointb5.py  checkpointb6.py  task2.py
fc/task3/: __init__.py  checkpointc1.py  checkpointc2.py  checkpointc3.py  checkpointc4.py  checkpointc5.py  checkpointc6.py  checkpointc7.py  task3.py  (+1 more)
oc/: oc.glade  oc.py
qual1/: q1.py  start1
qual2/: q2.py  start2
random/: dance.py  detect_eyes.py  handstand.py  logdiff  path_eyes.py  stairs.py  swing.py  swing_walk.py  train_eyes.py  transforms.py  tuck.py  walk.py
test/: army.py  button.py  detect_test.py  findbutton.py  get_m.py  grabtest.py  laser.py  laser_assemble.py  movefoot.py  path_test.py  rngfind.py  rngfindlive.py  toolsfind.py  turn.py  walktest.py
zarjsim/: assemble  batch  batch.quals  batch_q1  batcht1  batcht2  batcht3  cleanup  fcsource  finished.py  harnessed.py  init_robot.sh.loadtime.patch  init_zarj_robot.sh  package.xml  replay  ros-nofile.conf  roslaunch.offline.patch  seeworld  setup_machine.bash  srcsim  start1  start2  tarbatch  unique.launch.allowgui.patch  validate2
zarjsim/dependencies/: valkyrie_sim_gazebo_sync.urdf
zarjsim/launch/: assemble.launch  qual2.launch  qual2a.launch  qual2b.launch  qual2c.launch  qual2d.launch
(+25 files in other folders)
